--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,23 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		Event App
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/eventapp.js"></script>
+        <link href="index_css.css" rel="stylesheet" type="text/css">
+		<title>Event App</title>
+    </head>
+    <body>
+	<div id="main">
+		<div id="uno" bgcolor="red"><h1>EventApp</h1></div>
+		<hr></hr>
+	</div>	
+		<div id="boton1">
+			<a href="login.html"><button>Iniciar sesión</button><br></a>
+		</div>
+		<div id="boton2">
+			<a href="sing-up.html"><button> Crear cuenta</button></a>
+		</div>
 	</body>
 </html>
