--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 		<title>Event App</title>
     </head>
     <body>
-		<div id="uno"><h1>EventApp</h1></div>
+		<div id="uno"><h1>EventApp</h1></div>a
 		<hr></hr>
 		
 		<div id="form-log">
