--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,14 @@
 		<hr></hr>
 	</div>	
 		<div id="boton1">
-			<a href="login.html"><button>Iniciar sesión</button><br></a>
+			<form action="/sing-up.html" method="post">
+				<button>Login</button>
+			</form>
 		</div>
 		<div id="boton2">
-			<a href="sing-up.html"><button> Crear cuenta</button></a>
+			<form action="/sing-up.html"  method="get">
+				<button>Crear cuenta</button>
+			</form>
 		</div>
 	</body>
 </html>
