--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 	<div id="main">
-		<div id="uno" bgcolor="red"><h1>EventApp</h1></div>
+		<div id="uno" bgcolor="red"><h1>EventApp esta funcionando</h1></div>
 		<hr></hr>
 	</div>	
 		<div id="boton1">
